# Packages

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  link.cmd  syntax_test_css.css
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ASP/: ASP.sublime-syntax  Comments.tmPreferences  Fold.tmPreferences  HTML (ASP).sublime-syntax  HTML-ASP.sublime-syntax  Indentation Rules.tmPreferences  Indexed Symbol List.tmPreferences  Script Lang Values.sublime-completions  Script Type Values.sublime-completions  Symbol List.tmPreferences  syntax_test_asp.asp
ActionScript/: ActionScript.sublime-build  ActionScript.sublime-completions  ActionScript.sublime-syntax  ActionScript.tmPreferences  file_type_actionscript.tmPreferences  syntax_test_as.as
AppleScript/: AppleScript.sublime-syntax  Comments.tmPreferences  Fold.tmPreferences  file_type_applescript.tmPreferences  syntax_test_applescript.applescript
Batch File/: Batch File (Compound).sublime-syntax  Batch File.sublime-settings  Batch File.sublime-syntax  Batch File.tmLanguage  Comments.tmPreferences  Default.sublime-keymap  Fold.tmPreferences  Indentation Rules.tmPreferences  Indexed Reference List.tmPreferences  Symbol Index.tmPreferences  Symbol List.tmPreferences  syntax_test_batch.bat  syntax_test_batch_file.bat
Binary/: Binary.sublime-settings  Binary.sublime-syntax
C#/: Build.sublime-syntax  C#.sublime-syntax  C#.tmLanguage  Comments.tmPreferences  Fold.tmPreferences  Indentation Rules.tmPreferences  Indentation.tmPreferences  README.md  Symbol Index - Constructors.tmPreferences  Symbol List - Classes.tmPreferences  Symbol List - Constants.tmPreferences  Symbol List - Constructors.tmPreferences  Symbol List - Enums.tmPreferences  Symbol List - Inner Function.tmPreferences  Symbol List - Interfaces.tmPreferences  Symbol List - Members.tmPreferences  Symbol List - Namespace.tmPreferences  Symbol List - Region.tmPreferences  Symbol List - Structs.tmPreferences  Symbol List - Unions.tmPreferences  Symbol List - Using.tmPreferences  Symbol List Classes.tmPreferences  Symbol List Constructors.tmPreferences  Symbol List Enums.tmPreferences  Symbol List Index Constructors.tmPreferences  Symbol List Inner Classes.tmPreferences  Symbol List Inner Function.tmPreferences  Symbol List Inner Inner Classes.tmPreferences  Symbol List Inner Inner Inner Region.tmPreferences  Symbol List Inner Inner Method.tmPreferences  Symbol List Inner Inner Region.tmPreferences  Symbol List Inner Method.tmPreferences  Symbol List Inner Region.tmPreferences  Symbol List Interfaces.tmPreferences  Symbol List Namespace.tmPreferences  Symbol List Region.tmPreferences  Symbol List Structs.tmPreferences  doc_params.sublime-snippet  doc_see.sublime-snippet  syntax_test_c#.cs
C++/: C Single File.sublime-build  C Standard Includes.sublime-completions  C++ Single File.sublime-build  C++ Standard Includes.sublime-completions  C++.sublime-settings  C++.sublime-syntax  C++.tmLanguage  C.sublime-syntax  C.tmLanguage  Comments (C++).tmPreferences  Comments.tmPreferences  Completion Rules.tmPreferences  Default.sublime-keymap  Documentation.sublime-syntax  Doxygen.sublime-syntax  Enumeration.sublime-snippet  Fold.tmPreferences  Indentation Rules - Comments.tmPreferences  Indentation Rules Comments.tmPreferences  Indentation Rules.tmPreferences  Indexed Reference List.tmPreferences  POSIX Includes.sublime-completions  Symbol Index - Hide Ctors.tmPreferences  Symbol Index Hide Ctors.tmPreferences  Symbol Index Include Constants.tmPreferences  Symbol Index.tmPreferences  Symbol List - Hide Forward Decls.tmPreferences  Symbol List - Indent Class Methods.tmPreferences  Symbol List - Namespace Spacing.tmPreferences  Symbol List - Prefix Banner Items.tmPreferences  Symbol List Hide Forward Decls.tmPreferences  Symbol List.tmPreferences  file_type_c++.tmPreferences  struct.sublime-snippet  syntax_test_accessor.c  syntax_test_accessor.cpp  syntax_test_c.c  syntax_test_cpp.cpp  syntax_test_doxygen.c
CSS/: CSS (Plain).sublime-syntax  CSS.sublime-settings  CSS.sublime-syntax  Comments.tmPreferences  Completion Rules.tmPreferences  Default.sublime-keymap  Fold.tmPreferences  Indentation Rules - Comments.tmPreferences  Indentation Rules.tmPreferences  Monokai.sublime-color-scheme  Reference Index.tmPreferences  Symbol Index.tmPreferences  Symbol List - Container.tmPreferences  Symbol List - Custom Properties.tmPreferences  Symbol List - Group.tmPreferences  Symbol List - Layers.tmPreferences  Symbol List - Selector.tmPreferences  (+6 more)
Haskell/: Cabal Comments.tmPreferences  Cabal Symbol List - Sections.tmPreferences  Cabal Symbol List.tmPreferences  Cabal.sublime-syntax  Comments.tmPreferences  Default.sublime-keymap  Haskell.sublime-build  Haskell.sublime-settings  Haskell.sublime-syntax  Haskell.tmLanguage  Indent Patterns.tmPreferences  Indentation Rules.tmPreferences  Indexed Reference List.tmPreferences  Indexed Symbol List.tmPreferences  Literate Haskell.sublime-syntax  Reference List - Operators.tmPreferences  Symbol List - Constants.tmPreferences  Symbol List - Exports.tmPreferences  Symbol List - Imports.tmPreferences  Symbol List - Modules.tmPreferences  Symbol List - Operators.tmPreferences  Symbol List - Types.tmPreferences  Symbol List.tmPreferences  syntax_test_cabal.cabal  syntax_test_haskell.hs  syntax_test_literate.lhs
Haskell/Completions/: Haskell - Foreign.sublime-completions  Haskell - Import.sublime-completions  Haskell - Keywords.sublime-completions  Haskell - LANGUAGE values.sublime-completions  Haskell - PRAGMA.sublime-completions  Haskell - Prelude Functions.sublime-completions  Haskell - Prelude Types.sublime-completions
Haskell/Embeddings/: HTML (for HSX).sublime-syntax
Haskell/Snippets/: Case.sublime-snippet  Instance.sublime-snippet  Lambda.sublime-snippet  Main.sublime-snippet  module.sublime-snippet
Haskell/completions/: Haskell.sublime-completions
Haskell/syntaxes/: Haskell.sublime-syntax
Haskell/tests/: syntax_test_cabal.cabal  syntax_test_haskell.hs  syntax_test_literate.lhs  syntax_test_shebang.hs
(+2648 files in other folders)
